<resources>
    <string name="app_name">Ecofy</string>
    <string name="main">Головна</string>
    <string name="map">Карта</string>
    <string name="tips">Поради</string>
    <string name="account">Профіль</string>
    <string name="welcome">Вітаємо</string>
    <string name="nearest_stations">Найближчі станції</string>
    <string name="view_all">Дивитися всі</string>
    <string name="settings_title">Профіль</string>
    <string name="language">Мова</string>
    <string name="first_name">Ім\'я</string>
    <string name="put_first_name">Введіть ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="phone">Телефон</string>
    <string name="city">Місто</string>
    <string name="email">Електронна адреса</string>
    <string name="password">Пароль</string>
    <string name="new_password">Новий пароль</string>
    <string name="cancel">Скасувати</string>
    <string name="save">Зберегти</string>
    <string name="logout">Вийти</string>
    <string name="change_city">Змінити</string>
    <string name="tips_title">Поради</string>
    <string name="tips_subtitle">Як сортувати правильно</string>
    <string name="fill_level">Рівень заповнення</string>
    <string name="saved">Збережено</string>
    <string name="save_error">Помилка збереження</string>
    <string name="network_error">Помилка мережі</string>
    <string name="select_city">Оберіть місто зі списку</string>
    <string name="login_button">Увійти</string>
    <string name="register_button">Зареєструватися</string>
    <string name="all_categories">Всі</string>
    <string name="auth_title">Вхід</string>
    <string name="email_hint">name@email.com</string>
    <string name="password_hint">Введіть пароль</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="no_account">Не маєте акаунта? Зареєструватися</string>
    <string name="reg_title">Реєстрація</string>
    <string name="reg_name">Ім\'я</string>
    <string name="exit_card_text">Ви впевнені, що хочете вийти?</string>
    <string name="terms_agree">Я прочитав і погоджуюся з Умовами використання та Політикою конфіденційності.</string>
    <string name="create_password">Створіть пароль</string>
    <string name="confirm_password">Підтвердіть пароль</string>
    <string name="back">Повернутися назад\n</string>
    <string name="choose_city">Оберіть населений пункт</string>
    <string name="eco_days">Ви вже %1$d днів в Ecofy!</string>
    <string name="search_station">Пошук станції...</string>
    <string name="exit">Вихід</string>
    <string name="notifications">Сповіщення</string>
    <string name="notifications_subtitle">Ваші останні повідомлення та оновлення</string>
</resources>