<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/kyiv_type_medium"
                android:text="@string/reg_title"
                android:textColor="#1B1D1C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/reg_name"
                android:textColor="#1B1D1C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_variants"
                android:hint="@string/put_first_name"
                android:padding="12dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/email"
                android:textColor="#1B1D1C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_variants"
                android:hint="name@email.com"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/password"
                android:textColor="#1B1D1C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_rounded_variants"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <EditText
                android:id="@+id/user_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_rounded_variants"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/terms_agree"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_reg"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="#3CB371"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/link_to_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/auth_title"
            android:textColor="#1B1D1C"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>