<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:elevation="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_bottom_nav">

        <!-- TAB MAIN -->
        <LinearLayout
            android:id="@+id/tab_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_main"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/text_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/main"
                android:textSize="11sp" />
        </LinearLayout>

        <!-- TAB MAP -->
        <LinearLayout
            android:id="@+id/tab_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_map"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_map" />

            <TextView
                android:id="@+id/text_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/map"
                android:textSize="11sp" />
        </LinearLayout>

        <!-- TAB TIPS -->
        <LinearLayout
            android:id="@+id/tab_tips"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_tips"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_tips" />

            <TextView
                android:id="@+id/text_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tips"
                android:textSize="11sp" />
        </LinearLayout>

        <!-- TAB ACCOUNT -->
        <LinearLayout
            android:id="@+id/tab_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_user"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_user" />

            <TextView
                android:id="@+id/text_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/account"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>