<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome"
                            android:textColor="#444444"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kyiv_type_medium"
                            android:text="Ім'я!"
                            android:textColor="#111111"
                            android:textSize="34sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">

                        <ImageView
                            android:id="@+id/ivNotifications"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_notification"
                            app:tint="#111111"/>

                        <View
                            android:id="@+id/vNotificationBadge"
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_gravity="top|end"
                            android:background="@drawable/red_circle"/>

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/img_banner"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvDaysInApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eco_days"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nearest_stations"
                    android:textColor="#B0B0B0"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/component_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>